@@ -163,7 +163,7 @@ done
 
 ###########################################################
 #                                                         #
-# Is licence-file 0.6.18 allready local ?                 #
+# Is licence-file 0.6.19 allready local ?                 #
 #                                                         #
 ###########################################################
 
