@@ -293,7 +293,9 @@ Fixes:
   to small.(Incremented the value by 1).
 - Do not remove openssh-server and openssh-client during the execution of deinstall.sh 
 - Fix issue 19 
-- README.linux replaced with README.en.linux 
+- README.linux replaced with README.en.linux
+- Possible fix that prevent occur of issue 17 ...
+ 
  
 
 
